--- a/Tweet/tweetapp/templates/tweet_form.html
+++ b/Tweet/tweetapp/templates/tweet_form.html
@@ -4,13 +4,17 @@
 {% endblock %}
 
 {% block content %}
+<div class="container p-2 m-2 ">
 <h1 class="text-center m-3 ">Welcome to Diwad's Tweet </h1>
-<h2>{% if form.instance.pk %} Edit Tweet {% else %} Create tweet {% endif %} 
+ <h3>{% if form.instance.pk %} Edit Tweet {% else %} Create tweet {% endif %} </h3>
+ <div class="card p-3 m-2">
     <form method="post" enctype="multipart/form-data" class="form"> 
     {% csrf_token %}
     {{ form.as_p }}
     <button class="btn btn-warning" type="submit">Submit</button>    
     </form>
     <a href="{% url 'tweet_list' %}">Back to tweet list</a>
-</h2>
+</div>
+
+</div>
 {% endblock %}
